AQ2-47 add job CRUD surfaces
